@@ -62,4 +62,60 @@ function group_get_groups ($filter = false) {
 	return $return;
 }
 
+function print_groups_table ($groups) {
+	
+	enterprise_include("include/functions_groups.php");
+	$return = enterprise_hook ('print_groups_table_extra', array($groups));
+	if ($return === ENTERPRISE_NOT_HOOK){
+		$table->width = '99%';
+		$table->class = 'listing';
+		$table->head = array ();
+		$table->head[0] = __('Icon');
+		$table->head[1] = __('Name');
+		$table->head[2] = __('Parent');
+		$table->head[3] = __('Delete');
+		$table->data = array ();
+		$table->align = array ();
+		$table->align[3] = 'center';
+		$table->style = array ();
+		$table->style[1] = 'font-weight: bold';
+		$table->size = array ();
+		$table->size[0] = '40px';
+		$table->size[3] = '40px';
+		
+		if ($groups === false)
+			$groups = array ();
+			foreach ($groups as $group) {
+			$data = array ();
+			
+			$data[0] = '';
+			if ($group['icon'] != '')
+				$data[0] = '<img src="images/groups_small/'.$group['icon'].'" />';
+				
+			if ($group["id_grupo"] != 1) {
+				$data[1] = '<a href="index.php?sec=users&sec2=godmode/grupos/configurar_grupo&id='.
+					$group['id_grupo'].'">'.$group['nombre'].'</a>';
+			} else {
+				$data[1] = $group["nombre"];
+			}
+			$data[2] = dame_nombre_grupo ($group["parent"]);
+			
+			//Group "all" is special not delete and no update
+			if ($group["id_grupo"] != 1) {
+				$data[3] = '<a href="index.php?sec=users&
+						sec2=godmode/grupos/lista_grupos&
+						id_grupo='.$group["id_grupo"].'&
+						delete_group=1&id='.$group["id_grupo"].
+						'" onClick="if (!confirm(\''.__('Are you sure?').'\')) 
+						return false;">
+						<img src="images/cross.png"></a>';
+			} else {
+				$data[3] = "";
+			}
+			array_push ($table->data, $data);
+		}
+		print_table ($table);
+	}
+}
+
 ?>
